# obs-bilibili

./: .gitignore  CMakeLists.txt  cmake_deps_dir.patch
.github/workflows/: main.yml
data/locale/: zh-CN.ini
obs-bilibili/: CMakeLists.txt  obs-bilibili-live-source.c
obs-bilibili/data/locale/: en-US.ini
